Change logic for order server
