# app/Http/Controllers/API/OrderController.php
@@ -30,22 +30,43 @@ class OrderController extends Controller
      *     @SWG\Parameter(
      *         name="userId",
      *         in="formData",
-     *         type="string",
+     *         type="integer",
      *         description="Which user is making order",
      *         required=true,
      *     ),
      *     @SWG\Parameter(
-     *         name="serverId",
+     *         name="gameId",
      *         in="formData",
-     *         type="string",
-     *         description="Which server wants",
+     *         type="integer",
+     *         description="Which game user wants",
      *         required=true,
      *     ),
      *     @SWG\Parameter(
-     *         name="slotNumber",
+     *         name="location",
+     *         in="formData",
+     *         type="integer",
+     *         description="Where to be stored",
+     *         required=true,
+     *     ),
+     *     @SWG\Parameter(
+     *         name="slots",
+     *         in="formData",
+     *         type="integer",
+     *         description="How many slots",
+     *         required=true,
+     *     ),
+     *     @SWG\Parameter(
+     *         name="months",
      *         in="formData",
      *         type="string",
-     *         description="How many pings",
+     *         description="How long to be active",
+     *         required=true,
+     *     ),
+     *     @SWG\Parameter(
+     *         name="modId",
+     *         in="formData",
+     *         type="string",
+     *         description="Which mod",
      *         required=true,
      *     ),
      *      @SWG\Response(
